--- a/app/src/main/res/layout/sensor_data_item.xml
+++ b/app/src/main/res/layout/sensor_data_item.xml
@@ -1,24 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/data_item_chart"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="36dp"
-        android:layout_weight="1" />
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/data_item_date"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
         android:layout_weight="5"
-        android:text="TextViewasdasdasdasd" />
+        android:text="TextViewasdasdasdasd"
+        android:textSize="34sp"
+        app:layout_constraintStart_toEndOf="@+id/data_item_imageView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/data_item_imageView"
+        android:layout_width="112dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
+
+    <ImageView
+        android:id="@+id/vertical_div_imageView"
+        android:layout_width="33dp"
+        android:layout_height="117dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/vertical_div" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
