--- a/app/src/main/res/layout/sensor_data_item.xml
+++ b/app/src/main/res/layout/sensor_data_item.xml
@@ -21,13 +21,13 @@
 
     <ImageView
         android:id="@+id/data_item_imageView"
-        android:layout_width="112dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="58dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/table" />
 
     <ImageView
         android:id="@+id/vertical_div_imageView"
